--- a/core_java/jdbc/pom.xml
+++ b/core_java/jdbc/pom.xml
@@ -19,5 +19,10 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.7.0</version>
+    </dependency>
   </dependencies>
 </project>
