--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.9</version>
+    </dependency>
   </dependencies>
 
   <build>
