--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
     }
 
     environment {
-        app_name = 'jarvis-trading-app'
-	repo_url = '676994804800.dkr.ecr.us-east-1.amazonaws.com/mathew-eks'
+        app_name = 'trading-app-mathew'
+	repo_url = '676994804800.dkr.ecr.us-east-1.amazonaws.com'
 	rds_url = 'jrvstrading-mv.cqjlilomcylr.us-east-1.rds.amazonaws.com'
     }
 
