--- a/springboot/scripts/k8s/app-service-template.yaml
+++ b/springboot/scripts/k8s/app-service-template.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     svc: app-name
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
