--- a/springboot/scripts/k8s/app-ingress-template.yaml
+++ b/springboot/scripts/k8s/app-ingress-template.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/
 kind: Ingress
 metadata:
   name: app-name-ingress
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/target-type: instance
 spec:
   rules:
   - host: app-name.jrvs
