--- a/springboot/scripts/k8s/app-service-template.yaml
+++ b/springboot/scripts/k8s/app-service-template.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-name-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
   labels:
     svc: app-name
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 8080
     targetPort: 8080
