--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -6,23 +6,41 @@ pipeline {
     }
 
     environment {
-        app_name = 'trading-app-mathew'
-	repo_url = '676994804800.dkr.ecr.us-east-1.amazonaws.com'
-	rds_url = 'jrvstrading-mv.cqjlilomcylr.us-east-1.rds.amazonaws.com'
+        app_name = 'jarvis-trading-app'
     }
 
     stages {
-        stage('Build') {
+        stage('artifactory setup') {
+            rtServer(
+              id: 'Artifactory',
+              url: 'artifactory:8081/artifactory/trading-app-repo',
+              credentialsId: 'jenkins-artifactory',
+            )
+
+            rtMavenDeployer(
+              id: 'MAVEN_DEPLOYER',
+              serverId: 'Artifactory',
+              releaseRepo: 'trading-app-repo',
+              snapshotRepo: 'trading-app-repo',
+            )
+        }
+        stage('build-master') {
+            when { branch 'master' }
             steps {
-                echo "App name is ${app_name}, remote repo is ${repo_url}, building..."
-                sh "cd springboot/ && bash ./scripts/k8s/k8s_build.sh ${app_name} ${repo_url}"
+
             }
         }
-        stage('Deploy') {
+        stage('build-dev') {
+            when { branch 'develop' }
             steps {
-                echo "Running deployment script with ${app_name}, ${repo_url}, ${rds_url}"
-                sh "cd springboot && bash ./scripts/k8s/k8s_deploy.sh ${app_name} ${repo_url} ${rds_url}"
+                rtMavenRun(
+                    tool: M3,
+                    pom: 'springboot/pom.xml',
+                    goals: 'clean install',
+                    deployerId: 'MAVEN_DEPLOYER',
+                )
             }
         }
+
     }
 }
