--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
             steps {
                 echo 'Master branch'
                 rtMavenRun(
-                    tool: M3,
+                    tool: maven,
                     pom: 'springboot/pom.xml',
                     goals: 'clean install',
                     deployerId: 'MAVEN_DEPLOYER',
@@ -43,7 +43,7 @@ pipeline {
             steps {
                 echo 'Development branch'
                 rtMavenRun(
-                    tool: M3,
+                    tool: maven,
                     pom: 'springboot/pom.xml',
                     goals: 'clean install',
                     deployerId: 'MAVEN_DEPLOYER',
