--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -49,13 +49,13 @@ pipeline {
         stage('deploy-master') {
             when { branch 'master' }
             steps {
-                sh 'bash scripts/gcloud-deploy.sh "1.0"'
+                sh 'bash springboot/scripts/gcloud-deploy.sh "1.0"'
             }
         }
         stage('deploy-dev') {
             when { branch 'develop' }
             steps{
-                sh 'bash scripts/gcloud-deploy.sh "1.0-SNAPSHOT"'
+                sh 'bash springboot/scripts/gcloud-deploy.sh "1.0-SNAPSHOT"'
             }
         }
     }
